[tool.poetry]
name = "todo2"
version = "0.1.0"
description = ""
authors = ["asif-langrah <ak.development.pk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
